Prepare compilation with Java 16