@@ -24,6 +24,7 @@
     <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     <summer.version>0.11.4</summer.version>
     <geoip2.version>2.15.0</geoip2.version>
+    <lombok.version>1.18.20</lombok.version>
   </properties>
   <dependencies>
     <dependency>
@@ -124,24 +125,25 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>${java-version}</release>
-          <fork>true</fork>
-          <compilerArgs>
-            <arg>-Xlint:all,-deprecation,-unchecked,-processing,-requires-transitive-automatic</arg>
-            <!-- <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg> <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-              <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg> <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-              <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg> <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-              <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg> <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-              <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg> <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg> -->
-          </compilerArgs>
-          <!-- <compilerArgument>-Xlint:all,-deprecation,-unchecked,-processing,-requires-transitive-automatic - -add-modules java.xml.ws.annotation</compilerArgument> -->
-          <testCompilerArgument>-Xlint:none</testCompilerArgument>
-          <showWarnings>true</showWarnings>
-          <showDeprecation>true</showDeprecation>
-          <annotationProcessorPaths>
+        <source>16</source>
+        <target>16</target>
+        <fork>true</fork>
+        <compilerArgs>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+        </compilerArgs>
+        <annotationProcessorPaths>
             <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
             </path>
             <path>
